[tool.poetry]
name = "dbt-metadata"
version = "0.1.0"
description = "version and present all your dbt metadata"
authors = ["Tom Klimovski"]
license = "Apache License, Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dbt-artifacts-parser = "^0.2.3"
dbt-bigquery = "^1.3.0"
dbt-cloud-cli = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
